[SSO]: Improve Apple and Google support
